better flexible _configMSI.yml

--- a/NewInstallerTemplateMSI/CMakeLists.txt
+++ b/NewInstallerTemplateMSI/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.15.0)
 project(NewInstallerTemplateMSI)
 
 # Enable Unicode Character Set
-add_compile_definitions(UNICODE _UNICODE MYMAGIC=157593)
+add_compile_definitions(UNICODE _UNICODE)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -24,15 +24,15 @@ set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
 
 
-add_library(UnRAR0 SHARED
+add_library({{ CUSTOM_DLL_NAME }} SHARED
     msi_log.c
     dll.rc
 )
-target_link_libraries(UnRAR0
+target_link_libraries({{ CUSTOM_DLL_NAME }}
     PRIVATE
     msi
 )
-target_link_options(UnRAR0 PRIVATE
+target_link_options({{ CUSTOM_DLL_NAME }} PRIVATE
     "/SUBSYSTEM:WINDOWS"
     "/MANIFEST:NO"
 )
@@ -48,10 +48,10 @@ set(MSI_OUTPUT_DIR "${CMAKE_SOURCE_DIR}/Installer")
 # Add a custom target to build the MSI
 add_custom_target(Installer_{{ CNM }} ALL
     COMMAND ${CMAKE_COMMAND} -E make_directory "${MSI_OUTPUT_DIR}"
-    COMMAND "C:/Program Files/WiX Toolset v5.0/bin/wix.exe" build "${CMAKE_SOURCE_DIR}/heatwave.wxs" -out "${MSI_OUTPUT_DIR}/Installer_{{ CNM }}.msi" -ext WixToolset.UI.wixext -ext WixToolset.Util.wixext
+    COMMAND "{{ WIX_TOOLSET_EXE }}" build "${CMAKE_SOURCE_DIR}/heatwave.wxs" -out "${MSI_OUTPUT_DIR}/Installer_{{ CNM }}.msi" -ext WixToolset.UI.wixext -ext WixToolset.Util.wixext
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
 )
-# Make Installer depending on UnRAR0
-add_dependencies(Installer_{{ CNM }} UnRAR0)
+# Make Installer depending on {{ CUSTOM_DLL_NAME }}
+add_dependencies(Installer_{{ CNM }} {{ CUSTOM_DLL_NAME }})
 # Ensure the output of candle.exe and light.exe is visible in the MSVC build log
 set_property(TARGET Installer_{{ CNM }} PROPERTY ENABLE_EXPORTS TRUE)
