--- a/TFMCfW_Example_MSI/_configMSI.yml
+++ b/TFMCfW_Example_MSI/_configMSI.yml
@@ -28,3 +28,5 @@ MSVC_ROOT: C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise
 MSVC_CL_SUBDIR: VC\Tools\MSVC\14.29.30133\bin\HostX64\x64
 WIX_TOOLSET_EXE: C:/Program Files/WiX Toolset v5.0/bin/wix.exe
 CUSTOM_DLL_NAME: UnRAR0
+PYTHON_ROOT: C:\Users\test\AppData\Local\Programs\Python\Python311
+CMAKE_ROOT: C:\Program Files\CMake\bin
