--- a/TFMCfW_Example_MSI/CMakeLists.txt
+++ b/TFMCfW_Example_MSI/CMakeLists.txt
@@ -27,6 +27,10 @@ set(CMAKE_SHARED_LIBRARY_SUFFIX ".dll")
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build." FORCE)
 endif()
+# Set output directories based on build configuration
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/$<CONFIG>)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/$<CONFIG>)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/$<CONFIG>)
 # Set the NDEBUG and _DEBUG macros for Release and Debug configurations
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
     add_compile_definitions(NDEBUG)
